# rust-control-panel-template

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  deps.tree
.cargo/: config.toml
admin-panel/: README.MD  package.json  pnpm-lock.yaml  vite.config.ts
admin-panel/src/: App.tsx  Auth0.tsx  index.tsx
admin-panel/src/components/header/: index.tsx
admin-panel/src/pages/: login.tsx
admin-panel/src/pages/admin-users/: create.tsx  edit.tsx  list.tsx  show.tsx
prisma/: schema.prisma
prisma-cli/: Cargo.toml
public/: package.json  pnpm-lock.yaml  vite.config.ts
public/src/: App.tsx
public/src/admin/: create_forms.tsx  index.tsx
src/: lib.rs  schema.rs
src/http/: dev_proxy.rs  mod.rs
src/http/api_admin/: admin_user.rs  api_admin_user.rs  auth.rs  emdedded_files.rs  mod.rs  user.rs
src/schema/: admin_user.rs  migrations.rs
