[package]
name = "rust-control-panel-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
poem = { version = "3.1.1" }
http = "1.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
jwks = "0.1.3"
jsonwebtoken = "9.3"
clap = { version = "4.5", features = ["env"] }

[build-dependencies]
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["sqlite"] }

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "prisma"
path = "bin/prisma.rs"
