[package]
name = "rust-control-panel-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
poem = { version = "3.1.1", features = [] }
http = "1.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
jwks = "0.1.3"
jsonwebtoken = "9.3"
clap = { version = "4.5", features = ["env", "derive"] }
rust-embed = "8.0"
hex = { version = "0.4" }
mime_guess = { version = "2.0" }
welds = { version = "0.4", features = ["migrations", "check", "sqlite", "postgres", "mysql"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono"] }
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "server"
path = "bin/server.rs"
